# sqisign

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FUZZING.md  README.md  SECURITY.md  UPSTREAM.md
bindings/python/: README.md  pyproject.toml
bindings/python/sqisign/: __init__.py  _lib.py
bindings/python/tests/: test_sqisign.py
crates/sqisign/: Cargo.toml
crates/sqisign-common/: Cargo.toml
crates/sqisign-common/benches/: ctr_drbg.rs  secure_clear.rs  sha3.rs  shake128.rs  shake256.rs  shake_inc.rs
crates/sqisign-common/fuzz/: Cargo.toml
crates/sqisign-common/src/: hash.rs  lib.rs  mem.rs  rng.rs
crates/sqisign-common/tests/: ctr_drbg_props.rs  ctr_drbg_vectors.rs  secure_clear_props.rs  secure_clear_vectors.rs  sha3_props.rs  sha3_vectors.rs  shake128_props.rs  shake128_vectors.rs  shake256_props.rs  shake256_vectors.rs  shake_inc_props.rs  shake_inc_vectors.rs
crates/sqisign-ec/: Cargo.toml
crates/sqisign-ec/src/: lib.rs
crates/sqisign-ec/tests/: add_vectors.rs  copy_jac_point_vectors.rs  cswap_points_vectors.rs  dbl_vectors.rs  dblw_vectors.rs  ec_biscalar_mul_vectors.rs  ec_curve_init_from_a_vectors.rs  ec_curve_init_vectors.rs  ec_curve_normalize_a24_vectors.rs  ec_curve_to_basis_2f_from_hint_vectors.rs  ec_curve_to_basis_2f_to_hint_vectors.rs  ec_curve_verify_a_vectors.rs  ec_dbl_iter_basis_vectors.rs  ec_dbl_iter_vectors.rs  ec_dbl_vectors.rs  ec_dlog_2_tate_vectors.rs  ec_dlog_2_weil_vectors.rs  ec_eval_even_vectors.rs  ec_eval_small_chain_vectors.rs  ec_has_zero_coordinate_vectors.rs  ec_is_basis_four_torsion_vectors.rs  ec_is_equal_vectors.rs  ec_is_four_torsion_vectors.rs  ec_is_two_torsion_vectors.rs  ec_is_zero_vectors.rs  ec_iso_eval_vectors.rs  ec_isomorphism_vectors.rs  ec_j_inv_vectors.rs  ec_ladder3pt_vectors.rs  ec_mul_vectors.rs  ec_normalize_curve_and_a24_vectors.rs  ec_normalize_curve_vectors.rs  ec_normalize_point_vectors.rs  ec_point_init_vectors.rs  ec_recover_y_vectors.rs  jac_from_ws_vectors.rs  jac_init_vectors.rs  jac_is_equal_vectors.rs  jac_neg_vectors.rs  jac_to_ws_vectors.rs  (+21 more)
crates/sqisign-ffi/: Cargo.toml
crates/sqisign-ffi/examples/: c_demo.c
crates/sqisign-ffi/include/: sqisign.h
crates/sqisign-ffi/src/: lib.rs
crates/sqisign-ffi/tests/: c_abi_smoketest.rs
crates/sqisign-gf/: Cargo.toml
crates/sqisign-gf/benches/: fp_add.rs  fp_copy.rs  fp_cswap.rs  fp_div3.rs  fp_half.rs  fp_is_equal.rs  fp_is_zero.rs  fp_mul.rs  fp_mul_small.rs  fp_neg.rs  fp_select.rs  fp_set_one.rs  fp_set_small.rs  fp_set_zero.rs  fp_sqr.rs  fp_sub.rs
crates/sqisign-gf/fuzz/: Cargo.toml
crates/sqisign-gf/src/: lib.rs
crates/sqisign-gf/tests/: fp2_add_one_vectors.rs  fp2_add_vectors.rs  fp2_copy_vectors.rs  fp2_cswap_vectors.rs  fp2_decode_vectors.rs  fp2_encode_vectors.rs  fp2_half_vectors.rs  fp2_inv_vectors.rs  fp2_is_equal_vectors.rs  fp2_is_one_vectors.rs  fp2_is_square_vectors.rs  fp2_is_zero_vectors.rs  fp2_mul_small_vectors.rs  fp2_mul_vectors.rs  fp2_neg_vectors.rs  fp2_select_vectors.rs  fp2_set_one_vectors.rs  fp2_set_small_vectors.rs  fp2_set_zero_vectors.rs  fp2_sqr_vectors.rs  fp2_sqrt_vectors.rs  fp2_sqrt_verify_vectors.rs  fp2_sub_vectors.rs  fp_add_props.rs  fp_add_vectors.rs  fp_copy_props.rs  fp_copy_vectors.rs  fp_cswap_props.rs  fp_cswap_vectors.rs  fp_decode_reduce_vectors.rs  fp_decode_vectors.rs  fp_div3_props.rs  fp_div3_vectors.rs  fp_encode_vectors.rs  fp_exp3div4_vectors.rs  fp_half_props.rs  fp_half_vectors.rs  fp_inv_props.rs  fp_inv_vectors.rs  fp_is_equal_props.rs  (+24 more)
crates/sqisign-hd/: Cargo.toml
crates/sqisign-hd/src/: lib.rs
crates/sqisign-hd/tests/: add_couple_jac_points_vectors.rs  copy_bases_to_kernel_vectors.rs  couple_jac_to_xz_vectors.rs  double_couple_jac_point_iter_vectors.rs  double_couple_jac_point_vectors.rs  double_couple_point_iter_vectors.rs  double_couple_point_vectors.rs  double_iter_vectors.rs  double_point_vectors.rs  hadamard_vectors.rs  is_product_theta_point_vectors.rs  pointwise_square_vectors.rs  sample_random_index_vectors.rs  theta_precomputation_vectors.rs  to_squared_theta_vectors.rs
crates/sqisign-id2iso/: Cargo.toml
crates/sqisign-id2iso/src/: dim2id2iso.rs  id2iso.rs  lib.rs
crates/sqisign-id2iso/tests/: change_of_basis_matrix_tate_invert_vectors.rs  change_of_basis_matrix_tate_vectors.rs  ec_biscalar_mul_ibz_vec_vectors.rs  endomorphism_application_even_basis_vectors.rs  id2iso_ideal_to_kernel_dlogs_even_vectors.rs  id2iso_kernel_dlogs_to_ideal_even_vectors.rs  matrix_application_even_basis_vectors.rs
crates/sqisign-mp/: Cargo.toml
crates/sqisign-mp/benches/: mp_add.rs  mp_compare.rs  mp_copy.rs  mp_inv_2e.rs  mp_invert_matrix.rs  mp_is_one.rs  mp_is_zero.rs  mp_mod_2exp.rs  mp_mul.rs  mp_mul2.rs  mp_neg.rs  mp_shiftl.rs  mp_shiftr.rs  mp_sub.rs  multiple_mp_shiftl.rs  select_ct.rs  swap_ct.rs
crates/sqisign-mp/fuzz/: Cargo.toml
crates/sqisign-mp/src/: lib.rs
crates/sqisign-mp/tests/: mp_add_props.rs  mp_add_vectors.rs  mp_compare_props.rs  mp_compare_vectors.rs  mp_copy_props.rs  mp_copy_vectors.rs  mp_inv_2e_props.rs  mp_inv_2e_vectors.rs  mp_invert_matrix_props.rs  mp_invert_matrix_vectors.rs  mp_is_one_props.rs  mp_is_one_vectors.rs  mp_is_zero_props.rs  mp_is_zero_vectors.rs  mp_mod_2exp_props.rs  mp_mod_2exp_vectors.rs  mp_mul2_props.rs  mp_mul2_vectors.rs  mp_mul_props.rs  mp_mul_vectors.rs  mp_neg_props.rs  mp_neg_vectors.rs  mp_shiftl_props.rs  mp_shiftl_vectors.rs  mp_shiftr_props.rs  mp_shiftr_vectors.rs  mp_sub_props.rs  mp_sub_vectors.rs  multiple_mp_shiftl_props.rs  multiple_mp_shiftl_vectors.rs  select_ct_props.rs  select_ct_vectors.rs  swap_ct_props.rs  swap_ct_vectors.rs
crates/sqisign-precomp/: Cargo.toml
crates/sqisign-precomp/src/: lib.rs  loader.rs
crates/sqisign-precomp/tests/: precomp_vectors.rs
crates/sqisign-quaternion/: Cargo.toml
crates/sqisign-quaternion/src/: algebra.rs  dim2.rs  dim4.rs  dpe.rs  hnf.rs  ibz.rs  ibz_rand.rs  ideal.rs  integers.rs  lat_ball.rs  lattice.rs  lib.rs  lll.rs  lll_applications.rs  lll_verification.rs  normeq.rs  (+1 more)
crates/sqisign-sign/: Cargo.toml
crates/sqisign-verify/: Cargo.toml
(+173 files in other folders)
