[workspace]
resolver = "2"
members = [
    "crates/sqisign-common",
    "crates/sqisign-mp",
    "crates/sqisign-gf",
    "crates/sqisign-ec",
    "crates/sqisign-precomp",
    "crates/sqisign-quaternion",
    "crates/sqisign-id2iso",
    "crates/sqisign-hd",
    "crates/sqisign-verify",
    "crates/sqisign-sign",
    "crates/sqisign",
    "crates/sqisign-ffi",
    "crates/sqisign-vectors",
    "tools/vector-gen",
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
license = "LGPL-3.0-or-later"
repository = "local"
# The C reference at this commit is the canonical oracle. Keep in lockstep
# with UPSTREAM.md; CI verifies the two agree.
version = "0.0.0"

[workspace.dependencies]
# Internal crates referenced by path so the dependency graph mirrors the C
# sub-library graph exactly (see vendor/the-sqisign/src).
sqisign-common = { path = "crates/sqisign-common" }
sqisign-mp = { path = "crates/sqisign-mp" }
sqisign-gf = { path = "crates/sqisign-gf" }
sqisign-ec = { path = "crates/sqisign-ec" }
sqisign-precomp = { path = "crates/sqisign-precomp" }
sqisign-quaternion = { path = "crates/sqisign-quaternion" }
sqisign-id2iso = { path = "crates/sqisign-id2iso" }
sqisign-hd = { path = "crates/sqisign-hd" }
sqisign-verify = { path = "crates/sqisign-verify" }
sqisign-sign = { path = "crates/sqisign-sign" }
sqisign = { path = "crates/sqisign" }
sqisign-vectors = { path = "crates/sqisign-vectors" }

# Third-party. Pinned conservatively; bumps are reviewed for semantic drift in
# primitive operations (see Escalation Triggers in the plan).
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
hex = "0.4"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Audited primitives wired in behind the reference's boundaries (the plan's
# "port a standardized primitive" = wire-and-prove, not reimplement). sha3
# backs the SHAKE/SHA3 hashes; aes backs the AES-256-ECB core of the NIST
# CTR-DRBG; zeroize provides the optimiser-resistant memory clear (the
# crate is #![forbid(unsafe_code)], so hand-rolling volatile writes is out).
# Equivalence is proven by C-derived vectors.
sha3 = "0.10"
aes = "0.9"
zeroize = "1"

[profile.bench]
debug = true
