[workspace]
resolver = "2"
members = [
    "crates/sqisign-common",
    "crates/sqisign-mp",
    "crates/sqisign-gf",
    "crates/sqisign-ec",
    "crates/sqisign-precomp",
    "crates/sqisign-quaternion",
    "crates/sqisign-id2iso",
    "crates/sqisign-hd",
    "crates/sqisign-verify",
    "crates/sqisign-sign",
    "crates/sqisign",
    "crates/sqisign-ffi",
]

[workspace.package]
edition = "2021"
rust-version = "1.94"
license = "GPL-3.0-or-later"
repository = "local"
version = "0.0.0"

[workspace.dependencies]
# Internal crates referenced by path so the dependency graph mirrors the
# C sub-library graph exactly.
sqisign-common = { path = "crates/sqisign-common" }
sqisign-mp = { path = "crates/sqisign-mp" }
sqisign-gf = { path = "crates/sqisign-gf" }
sqisign-ec = { path = "crates/sqisign-ec" }
sqisign-precomp = { path = "crates/sqisign-precomp" }
sqisign-quaternion = { path = "crates/sqisign-quaternion" }
sqisign-id2iso = { path = "crates/sqisign-id2iso" }
sqisign-hd = { path = "crates/sqisign-hd" }
sqisign-verify = { path = "crates/sqisign-verify" }
sqisign-sign = { path = "crates/sqisign-sign" }
sqisign = { path = "crates/sqisign" }

# Third-party. Pinned conservatively; bumps are reviewed for semantic
# drift in primitive operations.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
hex = "0.4"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Audited primitives wired in behind the reference's boundaries: sha3
# backs the SHAKE/SHA3 hashes; aes backs the AES-256-ECB core of the
# NIST CTR-DRBG; zeroize provides the optimiser-resistant memory clear.
sha3 = "0.10"
aes = "0.9"
zeroize = "1"

[profile.bench]
debug = true
