[package]
name = "sqisign-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQIsign common: hashing (SHA-3/SHAKE), seed expansion, PRNG, memory utilities. Mirrors vendor/the-sqisign/src/common."

[dependencies]
# The reference's common/fips202.c is a standard FIPS-202 Keccak. We do not
# hand-roll Keccak: a standardized primitive gains nothing from a bespoke
# reimplementation and loses the scrutiny the audited RustCrypto sha3 crate
# has had. Behavioural equivalence to the C reference is not assumed; it is
# proven by the committed C-derived vectors (tests/shake256_vectors.rs).
sha3.workspace = true
# AES-256-ECB is the block-cipher core of the NIST CTR-DRBG. Same reasoning:
# wire in the audited RustCrypto aes crate, prove the DRBG construction atop
# it bit-equal to the reference (tests/ctr_drbg_vectors.rs).
aes.workspace = true
# Optimiser-resistant memory zeroing for sqisign_secure_clear. Hand-rolling
# the volatile write would need unsafe, which this crate forbids.
zeroize.workspace = true

[dev-dependencies]
sqisign-vectors.workspace = true
hex.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "shake256"
harness = false

[[bench]]
name = "shake128"
harness = false

[[bench]]
name = "shake_inc"
harness = false

[[bench]]
name = "sha3"
harness = false

[[bench]]
name = "ctr_drbg"
harness = false

[[bench]]
name = "secure_clear"
harness = false
