[package]
name = "sqisign-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C ABI bindings for sqisign verify (Katzenpost-facing)."

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
sqisign-verify.workspace = true

[dev-dependencies]
hex.workspace = true
