[package]
name = "sqisign-hd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQIsign (2,2)-isogenies in the theta model. Mirrors the-sqisign/src/hd."

[dependencies]
# sqisign-common provides the `RngSource` trait used by the randomised
# (2,2)-chain entry point and the KAT-only `CtrDrbg` used by tests.
sqisign-common.workspace = true
sqisign-gf.workspace = true
sqisign-ec.workspace = true

[dev-dependencies]
hex.workspace = true
# This unit ships differential vector tests only; no proptest, no
# criterion benches (per the unit's scope). Re-add them when fuzz harnesses
# or per-boundary benches land.
