[package]
name = "sqisign-mp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQIsign multiprecision integer arithmetic (saturated representation). Mirrors vendor/the-sqisign/src/mp."

[dependencies]
sqisign-common.workspace = true

[dev-dependencies]
sqisign-vectors.workspace = true
hex.workspace = true
criterion.workspace = true
