[package]
name = "sqisign-quaternion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQIsign quaternion orders and ideals. Verification needs a subset; signing needs the whole. Mirrors vendor/the-sqisign/src/quaternion."

[dependencies]
sqisign-common.workspace = true
sqisign-mp.workspace = true

[dev-dependencies]
sqisign-vectors.workspace = true
hex.workspace = true
proptest.workspace = true
criterion.workspace = true
