[package]
name = "sqisign-sign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQIsign KeyGen and Sign protocols. Pulls the full quaternion/id2iso paths. Mirrors the-sqisign/src/signature."

[dependencies]
sqisign-common.workspace = true
sqisign-gf.workspace = true
sqisign-mp.workspace = true
sqisign-ec.workspace = true
sqisign-hd.workspace = true
sqisign-precomp.workspace = true
sqisign-quaternion.workspace = true
sqisign-id2iso.workspace = true
sqisign-verify.workspace = true

[dev-dependencies]
sqisign-vectors.workspace = true
hex.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "sign"
harness = false
