[package]
name = "sqisign-common-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Own workspace: cargo-fuzz crates must not be members of the parent
# workspace (they pin a nightly-ish toolchain and libfuzzer-sys).
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sqisign-common = { path = ".." }

[[bin]]
name = "shake256"
path = "fuzz_targets/shake256.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shake128"
path = "fuzz_targets/shake128.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shake_inc"
path = "fuzz_targets/shake_inc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sha3"
path = "fuzz_targets/sha3.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ctr_drbg"
path = "fuzz_targets/ctr_drbg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "secure_clear"
path = "fuzz_targets/secure_clear.rs"
test = false
doc = false
bench = false
