[package]
name = "sqisign-gf-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Own workspace: cargo-fuzz crates must not be members of the parent
# workspace (they pin a nightly-ish toolchain and libfuzzer-sys).
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sqisign-gf = { path = ".." }

[[bin]]
name = "fp_add"
path = "fuzz_targets/fp_add.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fp_sub"
path = "fuzz_targets/fp_sub.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fp_neg"
path = "fuzz_targets/fp_neg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fp_copy"
path = "fuzz_targets/fp_copy.rs"
test = false
doc = false
bench = false
