[package]
name = "sqisign-mp-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Own workspace: cargo-fuzz crates must not be members of the parent
# workspace (they pin a nightly-ish toolchain and libfuzzer-sys).
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sqisign-mp = { path = ".." }

[[bin]]
name = "mp_add"
path = "fuzz_targets/mp_add.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mp_sub"
path = "fuzz_targets/mp_sub.rs"
test = false
doc = false
bench = false
